--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-  "name": "heroku",
-  "version": "1.0.0",
-  "description": "",
-  "main": "server.js",
+  "name": "top-io",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "start": "node server.js"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@octokit/core": "^3.2.1",
-    "@salesforce-ux/design-system": "^2.13.7",
     "axios": "^0.21.0",
-    "bootstrap": "^4.5.3",
-    "bootstrap-select": "^1.13.18",
-    "cool-ascii-faces": "^1.3.4",
+    "core-js": "^3.8.0",
     "express": "^4.17.1",
-    "mongoose": "^5.10.15",
-    "octokit": "^1.0.0-hello-world",
-    "openssl": "^1.1.0",
-    "requirejs": "^2.3.6"
+    "serve-static": "^1.14.1",
+    "vue": "^3.0.0",
+    "vue-router": "^4.0.0-0",
+    "vuex": "^4.0.0-0"
   },
   "devDependencies": {
-    "eslint": "^7.14.0"
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
+    "@vue/cli-plugin-vuex": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "vue-loader-v16": "^16.0.0-beta.5.4"
   }
 }
